--- a/CQP.Plugins/com.Doge.GroupGame.csproj
+++ b/CQP.Plugins/com.Doge.GroupGame.csproj
@@ -106,6 +106,9 @@
     <None Include="Newbe.CQP.Framework\ForPlugin\Newbe.CQP.Framework.ApiExporter.dll" />
     <None Include="Newbe.CQP.Framework\ForPlugin\readme.txt" />
   </ItemGroup>
+  <ItemGroup>
+    <Content Include="游戏keyword.txt" />
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Target Name="EnsureNuGetPackageBuildImports" BeforeTargets="PrepareForBuild">
     <PropertyGroup>
